button mobile fix attempt

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -303,7 +303,7 @@ footer {
     
   }
   button[name="listTitle"] {
-    width: 40px;
+    width: 30px;
   }
 
 }
